Add ListThreatAssignmentsByProductIDWithResolutionByInstanceID
